<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".AddEvent">

    <Button
        android:id="@+id/savebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="10dp"
        android:text="@string/savebtn"
        app:backgroundTint="@color/calendarBoxes"
        app:cornerRadius="@dimen/sign_up_btn"
        app:layout_constraintBottom_toTopOf="@+id/view5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toEndOf="@+id/cancelbtn"
        app:layout_constraintTop_toBottomOf="@+id/note"
        app:layout_constraintVertical_bias="0.393" />

    <View
        android:id="@+id/view5"
        android:layout_width="411dp"
        android:layout_height="45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/childbtn"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/notificationicon5"
        android:layout_width="@dimen/homeicon"
        android:layout_height="@dimen/homeicon_height"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/menuicon5"
        app:layout_constraintTop_toTopOf="@+id/view5"
        app:srcCompat="@drawable/ic_baseline_notifications_none_24" />

    <ImageView
        android:id="@+id/menuicon5"
        android:layout_width="@dimen/homeicon"
        android:layout_height="@dimen/homeicon_height"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/homeicon5"
        app:layout_constraintTop_toTopOf="@+id/view5"
        app:srcCompat="@drawable/ic_baseline_menu_24" />

    <ImageView
        android:id="@+id/accounticon5"
        android:layout_width="@dimen/homeicon"
        android:layout_height="@dimen/homeicon_height"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/view5"
        app:layout_constraintHorizontal_bias="0.831"
        app:layout_constraintStart_toEndOf="@+id/notificationicon5"
        app:layout_constraintTop_toTopOf="@+id/view5"
        app:srcCompat="@drawable/ic_baseline_person_24" />

    <ImageView
        android:id="@+id/homeicon5"
        android:layout_width="@dimen/homeicon"
        android:layout_height="@dimen/homeicon_height"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/view5"
        app:layout_constraintTop_toTopOf="@+id/view5"
        app:srcCompat="@drawable/ic_baseline_home_24" />

    <Switch
        android:id="@+id/pmBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/allerta"
        android:minHeight="48dp"
        android:text="@string/pmBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.119"
        app:layout_constraintStart_toEndOf="@+id/amBtn"
        app:layout_constraintTop_toBottomOf="@+id/editTextTime" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="0dp"
        android:layout_height="131dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/familimg" />

    <TextView
        android:id="@+id/eventHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/allerta"
        android:gravity="center"
        android:text="@string/eventHeader"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.336" />

    <EditText
        android:id="@+id/editTextTime"
        android:layout_width="189dp"
        android:layout_height="48dp"
        android:layout_marginTop="52dp"
        android:background="@color/calendarBoxes"
        android:ems="10"
        android:fontFamily="@font/allerta"
        android:hint="@string/editTextTime"
        android:inputType="time"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9"
        tools:ignore="TextContrastCheck" />

    <Switch
        android:id="@+id/amBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/allerta"
        android:minHeight="48dp"
        android:text="@string/amBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTime" />

    <EditText
        android:id="@+id/dateSet"
        android:layout_width="189dp"
        android:layout_height="48dp"
        android:layout_marginTop="92dp"
        android:background="@color/calendarBoxes"
        android:ems="10"
        android:fontFamily="@font/allerta"
        android:hint="@string/dateSet"
        android:inputType="date"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTime" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="33dp"
        android:layout_height="31dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toEndOf="@+id/dateSet"
        app:layout_constraintTop_toBottomOf="@+id/pmBtn"
        app:srcCompat="@drawable/ic_baseline_calendar_today_24" />

    <Button
        android:id="@+id/reminderbtn"
        android:layout_width="193dp"
        android:layout_height="55dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/allerta"
        android:text="@string/reminderbtn"
        android:textColor="@color/black"
        app:backgroundTint="@color/calendarBoxes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.119"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateSet" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="33dp"
        android:layout_height="32dp"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.119"
        app:layout_constraintStart_toEndOf="@+id/reminderbtn"
        app:layout_constraintTop_toBottomOf="@+id/imageView11"
        app:srcCompat="@drawable/ic_baseline_notifications_active_24" />

    <EditText
        android:id="@+id/note"
        android:layout_width="195dp"
        android:layout_height="46dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:fontFamily="@font/allerta"
        android:gravity="bottom|start|top"
        android:hint="@string/note"
        android:inputType="textMultiLine"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reminderbtn" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="38dp"
        android:layout_height="42dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toEndOf="@+id/note"
        app:layout_constraintTop_toBottomOf="@+id/imageView12"
        app:srcCompat="@drawable/ic_baseline_edit_note_24" />

    <Button
        android:id="@+id/button3"
        android:layout_width="21dp"
        android:layout_height="33dp"
        app:cornerRadius="100px"
        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.829"
        app:layout_constraintStart_toEndOf="@+id/eventHeader"
        app:layout_constraintTop_toTopOf="@+id/imageView9"
        app:layout_constraintVertical_bias="0.908" />

    <Button
        android:id="@+id/cancelbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:text="@string/cancelbtn"
        app:backgroundTint="@color/sign_up_btn"
        app:cornerRadius="@dimen/sign_up_btn"
        app:layout_constraintBottom_toTopOf="@+id/view5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/note"
        app:layout_constraintVertical_bias="0.449" />

</androidx.constraintlayout.widget.ConstraintLayout>