<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:circularflow_radiusInDP="@string/fb_btn"
    tools:context=".familyHome">

    <Button
        android:id="@+id/bdaybtn"
        android:layout_width="233dp"
        android:layout_height="76dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/allerta"
        android:text="@string/bdaybtn"
        android:textColor="@color/design_default_color_on_secondary"
        app:backgroundTint="@color/inputTextBox"
        app:cornerRadius="@dimen/sign_up_btn"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/childbtn"
        app:layout_constraintVertical_bias="0.15" />

    <Button
        android:id="@+id/childbtn"
        android:layout_width="233dp"
        android:layout_height="76dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/allerta"
        android:text="Child Mode"
        android:textColor="@color/sign_up_btn"
        app:backgroundTint="@color/inputTextBox"
        app:cornerRadius="@dimen/sign_up_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gallerybtn" />

    <Button
        android:id="@+id/gallerybtn"
        android:layout_width="233dp"
        android:layout_height="76dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/allerta"
        android:text="Gallery"
        android:textColor="@color/fb_color"
        app:backgroundTint="@color/inputTextBox"
        app:cornerRadius="@dimen/sign_up_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarbtn" />

    <Button
        android:id="@+id/calendarbtn"
        android:layout_width="233dp"
        android:layout_height="76dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/allerta"
        android:text="My Calendar"
        android:textColor="@color/design_default_color_secondary_variant"
        app:backgroundTint="@color/inputTextBox"
        app:cornerRadius="@dimen/sign_up_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grocerybtn" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/familimg" />

    <TextView
        android:id="@+id/family"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/allerta"
        android:gravity="center"
        android:text="Family"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.336" />

    <Button
        android:id="@+id/grocerybtn"
        android:layout_width="233dp"
        android:layout_height="76dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/allerta"
        android:text="@string/grocerybtn"
        android:textColor="@color/purple_500"
        app:backgroundTint="@color/inputTextBox"
        app:cornerRadius="@dimen/sign_up_btn"
        app:layout_constraintBottom_toTopOf="@+id/calendarbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/family" />

    <View
        android:id="@+id/view"
        android:layout_width="411dp"
        android:layout_height="45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/childbtn"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/homeicon"
        android:layout_width="@dimen/homeicon"
        android:layout_height="@dimen/homeicon_height"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:srcCompat="@drawable/ic_baseline_home_24" />

    <ImageView
        android:id="@+id/menuicon"
        android:layout_width="@dimen/homeicon"
        android:layout_height="@dimen/homeicon_height"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toEndOf="@+id/homeicon"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:srcCompat="@drawable/ic_baseline_menu_24" />

    <ImageView
        android:id="@+id/notificationicon"
        android:layout_width="@dimen/homeicon"
        android:layout_height="@dimen/homeicon_height"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toEndOf="@+id/menuicon"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:srcCompat="@drawable/ic_baseline_notifications_none_24" />

    <ImageView
        android:id="@+id/accounticon"
        android:layout_width="@dimen/homeicon"
        android:layout_height="@dimen/homeicon_height"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.569"
        app:layout_constraintStart_toEndOf="@+id/notificationicon"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:srcCompat="@drawable/ic_baseline_person_24" />

</androidx.constraintlayout.widget.ConstraintLayout>

